# AION-Revenue-Factory

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: live_wiring.py  run_week.py
src/aion_revenue_factory/: __init__.py  cli.py  config.py  dashboard.py  governance_agents.py  orchestrator.py  scoring.py
src/aion_revenue_factory/departments/: __init__.py  customer_success.py  deal_coach.py  learning_engine.py  meeting_prep.py  offer_intelligence.py  opportunity_discovery.py  outreach.py  proposal.py
src/aion_revenue_factory/domain/: __init__.py  enums.py  models.py
src/aion_revenue_factory/governance/: __init__.py  ledger.py  models.py  store.py
src/aion_revenue_factory/integrations/: __init__.py  ai_gateway.py  crm.py  knowledge.py
src/aion_revenue_factory/integrations/live/: __init__.py  airtable_crm.py  anthropic_gateway.py  prospect_sources.py  senders.py  supabase_crm.py  write_through.py
tests/: test_config_wiring.py  test_departments.py  test_domain.py  test_governance_wiring.py  test_live_integrations.py  test_orchestrator.py  test_scoring.py
