[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-revenue-factory"
version = "0.1.0"
description = "An autonomous AI business-development system that finds, qualifies, nurtures, and closes revenue opportunities 24/7."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AION" }]
keywords = ["ai", "sales", "revenue", "automation", "agents", "crm"]
dependencies = []

[project.optional-dependencies]
# Live adapters. Only the Claude gateway needs a third-party SDK; the Airtable,
# Supabase, prospect, and outreach adapters use the standard library.
live = ["anthropic>=0.40"]
dev = ["pytest>=7", "anthropic>=0.40"]

[project.scripts]
aion-revenue-factory = "aion_revenue_factory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
